fix(iam): 选中按钮，菜单不展示问题